fixing pdf stretch

--- a/src/style.css
+++ b/src/style.css
@@ -370,11 +370,13 @@ form input[type="submit"]:hover {
 
 .resume {
   width: 100%;
-  height: 800px;
+  height: auto;
+  min-height: 100vh;
   margin-bottom: 10px;
   margin-top: 20px;
   border: 2px solid var(--main-color);
   border-radius: 20px;
+  max-width: 100%;
 }
 
 @keyframes fadeIn {
